--- a/BESS.ipynb
+++ b/BESS.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,19 +27,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Bess_Optimizer:\n",
+    "    '''\n",
+    "    \n",
+    "    '''\n",
+    "\n",
     "    def __init__(self, case = '', power_capacity = 100, energy_capacity = 200, efficiency = 0.9):\n",
     "        self.case = case\n",
-    "        self.power_capacity = power_capacity\n",
+    "        self.efficiency = efficiency\n",
     "        self.energy_capacity = energy_capacity\n",
     "        self.energy_prices = None\n",
+    "        self.power_capacity = power_capacity\n",
     "        self.reg_up_prices = None\n",
     "        self.reg_down_prices = None\n",
-    "        self.efficiency = efficiency\n",
     "        self.total_profit = None\n",
     "\n",
     "\n",
@@ -96,8 +100,17 @@
     "                                    upBound = self.power_capacity\n",
     "                                    )     \n",
     "        \n",
+    "        # switch for activating charge\n",
+    "        self.charge_sw = LpVariable.dicts(                                                                 \n",
+    "                                    name = 'charge_sw', \n",
+    "                                    indices= period,\n",
+    "                                    lowBound = 0, \n",
+    "                                    upBound = 1,\n",
+    "                                    cat = \"Binary\"\n",
+    "                                    )     \n",
+    "        \n",
     "        # regulation up hourly\n",
-    "        self.reg_up_power = LpVariable.dicts(\n",
+    "        self.reg_up = LpVariable.dicts(\n",
     "                                        name = 'reg_up_hour',\n",
     "                                        indices= period,\n",
     "                                        lowBound = 0,\n",
@@ -105,7 +118,7 @@
     "                                        )\n",
     "\n",
     "        # regulation down hourly                        \n",
-    "        self.reg_down_power = LpVariable.dicts(\n",
+    "        self.reg_down = LpVariable.dicts(\n",
     "                                        name = 'reg_down_hour',\n",
     "                                        indices= period,\n",
     "                                        lowBound = 0,\n",
@@ -124,10 +137,15 @@
     "        self.optimizer += lpSum(\n",
     "                                self.energy_prices[self.energy_prices['Date']==hour]['Price'].iloc[0] * self.gen_hour[hour] -\n",
     "                                self.energy_prices[self.energy_prices['Date']==hour]['Price'].iloc[0] * self.charge_hour[hour] +\n",
-    "                                self.reg_prices[self.reg_prices['Date']==hour]['Regulation Up'].iloc[0] * self.reg_up_power[hour] +\n",
-    "                                self.energy_prices[self.energy_prices['Date']==hour]['Price'].iloc[0] * self.reg_up_power[hour] * 0.1 \n",
+    "                                self.reg_prices[self.reg_prices['Date']==hour]['Regulation Up'].iloc[0] * self.reg_up[hour] +\n",
+    "                                self.energy_prices[self.energy_prices['Date']==hour]['Price'].iloc[0] * self.reg_up[hour] * 0.1 +\n",
+    "                                self.reg_prices[self.reg_prices['Date']==hour]['Regulation Down'].iloc[0] * self.reg_down[hour] +\n",
+    "                                self.energy_prices[self.energy_prices['Date']==hour]['Price'].iloc[0] * self.reg_down[hour] * 0.1 \n",
     "                                for hour in period\n",
     "                                )\n",
+    "        \n",
+    "        # initializing total charge \n",
+    "        self.optimizer += self.total_charge[period[0]] == initial_charge\n",
     "        \n",
     "        # iterate over the days in the period\n",
     "        # only 1 cycle of charge/discharge per day\n",
@@ -137,33 +155,44 @@
     "            self.optimizer += lpSum(\n",
     "                                self.gen_hour[hour] \n",
     "                                for hour in hour_day\n",
-    "                                ) <= self.energy_capacity * (1/self.efficiency)\n",
+    "                                ) <= self.energy_capacity \n",
     "        \n",
     "            self.optimizer += lpSum(\n",
     "                                    self.charge_hour[hour] \n",
     "                                    for hour in hour_day\n",
-    "                                    ) <= self.energy_capacity * (1/self.efficiency)\n",
-    "            \n",
-    "        # generation plus regulation up should be less than capacity\n",
-    "        for index in range(len(period)):\n",
-    "            hour = period[index]\n",
-    "            self.optimizer += (self.gen_hour[hour] + self.reg_up_power[hour]) * self.efficiency <= self.power_capacity \n",
-    "        \n",
-    "        for index in range(len(period)):\n",
-    "            hour = period[index]\n",
-    "            self.optimizer += (self.gen_hour[hour] + self.reg_up_power[hour]) * (1/self.efficiency) <= self.total_charge[hour]\n",
-    "        \n",
+    "                                    ) <= self.energy_capacity \n",
     "\n",
-    "        self.optimizer += self.total_charge[period[0]] == initial_charge\n",
     "        \n",
     "        # temporary dependency on charginf for all hours\n",
     "        for index in range(len(period)):\n",
     "            if index > 0:\n",
     "                past_hour = period[index-1]\n",
     "                hour = period[index]\n",
-    "                self.optimizer += self.total_charge[hour] == self.total_charge[past_hour] + self.charge_hour[past_hour] * self.efficiency - self.gen_hour[past_hour] *(1/self.efficiency)\n",
-    "                self.optimizer += self.gen_hour[hour] <= self.total_charge[hour] \n",
-    "        \n",
+    "                self.optimizer += self.total_charge[hour] == self.total_charge[past_hour] + self.charge_hour[past_hour] * self.efficiency  - self.gen_hour[past_hour] - self.reg_up[past_hour] * 0.1 + self.reg_down[past_hour] * 0.1\n",
+    "                \n",
+    "        for index in range(len(period)):\n",
+    "                hour = period[index]\n",
+    "\n",
+    "                # generation plus regulation up should be less than capacity\n",
+    "                self.optimizer += (self.gen_hour[hour] + self.reg_up[hour]) <= self.power_capacity\n",
+    "                \n",
+    "                # generation plus regulation up should be less than battery charge\n",
+    "                self.optimizer += self.gen_hour[hour] + self.reg_up[hour] <= self.total_charge[hour] \n",
+    "                \n",
+    "                # switch to charge, charging only when swith is on (1)\n",
+    "                self.optimizer += self.charge_hour[hour] <= self.charge_sw[hour] * self.power_capacity\n",
+    "                \n",
+    "                self.optimizer += self.charge_hour[hour] >= self.charge_sw[hour] * 0.001\n",
+    "                \n",
+    "                # reg down should be less than generation \n",
+    "                self.optimizer += self.reg_down[hour] <= self.gen_hour[hour]\n",
+    "                \n",
+    "                # exclude reg_down when battery is charging\n",
+    "                self.optimizer += self.reg_down[hour] <= (1 - self.charge_sw[hour]) * self.power_capacity\n",
+    "                \n",
+    "                # exclude reg_up when battery is charging\n",
+    "                self.optimizer += self.reg_up[hour] <= (1 - self.charge_sw[hour]) * self.power_capacity\n",
+    "\n",
     "        self.optimizer.solve()\n",
     "        self.total_profit = self.optimizer.objective.value()\n",
     "\n",
@@ -172,7 +201,7 @@
     "        '''\n",
     "        print the results of the optimization and the values of total profit\n",
     "        '''\n",
-    "        vars = ['gen_hour', 'charge_hour', 'reg_up_hour', 'reg_down_hour', 'total_charge']\n",
+    "        vars = ['gen_hour', 'charge_hour', 'reg_up_hour', 'reg_down_hour', 'total_charge','charge_sw']\n",
     "        results_dict = {}\n",
     "\n",
     "        for var in vars:\n",
@@ -182,24 +211,19 @@
     "                    day_hour = v.name.replace(var + '_', '')\n",
     "                    day_hour = day_hour.replace('_', '-')\n",
     "                    day_hour = datetime.strptime(day_hour, '%Y-%m-%d-%H')\n",
-    "                    results_dict[var][day_hour] = v.varValue\n",
+    "                    results_dict[var][day_hour] = round(v.varValue,2)\n",
     "        results_ds = pd.DataFrame.from_dict(results_dict)\n",
+    "        print(results_ds.head(10))\n",
     "        results_ds.to_csv(f'results-{self.case}.csv')\n",
-    "    \n",
-    "    \n",
-    "    def visualize(self):\n",
-    "        '''\n",
-    "        visualize the results of the optimization\n",
-    "        '''\n",
-    "        pass\n",
-    "\n",
-    "     "
+    "    "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### run a case"
+   ]
   },
   {
    "cell_type": "code",
@@ -210,7 +234,7 @@
     "optimizer = Bess_Optimizer(case = 'case1', power_capacity = 100, energy_capacity = 200, efficiency = 0.9)\n",
     "optimizer.load_prices(energy_price_file ='data/energy_prices.csv')\n",
     "optimizer.load_regulation(regulation_price_file = 'data/regulation_prices.csv')\n",
-    "optimizer.optimize_period(start_day = '1/1/2023', end_day = '2/1/2023', initial_charge = 0)\n",
+    "optimizer.optimize_period(start_day = '1/1/2023', end_day = '1/2/2023', initial_charge = 0)\n",
     "print(f'{optimizer.total_profit = }')\n",
     "optimizer.get_results()"
    ]
