--- a/BESS.ipynb
+++ b/BESS.ipynb
@@ -4,42 +4,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Import Libraries"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "from pulp import LpProblem, LpMaximize, LpVariable, lpSum\n",
-    "from datetime import datetime"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### Bess Optimizer Class"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "from pulp import LpProblem, LpMaximize, LpVariable, lpSum\n",
+    "from datetime import datetime\n",
+    "\n",
     "class Bess_Optimizer:\n",
-    "    '''\n",
-    "    \n",
-    "    '''\n",
     "\n",
     "    def __init__(self, case = '', power_capacity = 100, energy_capacity = 200, efficiency = 0.9):\n",
     "        self.case = case\n",
     "        self.efficiency = efficiency\n",
-    "        self.energy_capacity = energy_capacity\n",
+    "        self.energy_capacity = energy_capacity / self.efficiency\n",
     "        self.energy_prices = None\n",
     "        self.power_capacity = power_capacity\n",
     "        self.reg_up_prices = None\n",
@@ -101,13 +84,13 @@
     "                                    )     \n",
     "        \n",
     "        # switch for activating charge\n",
-    "        self.charge_sw = LpVariable.dicts(                                                                 \n",
-    "                                    name = 'charge_sw', \n",
-    "                                    indices= period,\n",
-    "                                    lowBound = 0, \n",
-    "                                    upBound = 1,\n",
-    "                                    cat = \"Binary\"\n",
-    "                                    )     \n",
+    "        # self.sw_charge = LpVariable.dicts(                                                                 \n",
+    "        #                             name = 'sw_charge', \n",
+    "        #                             indices= period,\n",
+    "        #                             lowBound = 0, \n",
+    "        #                             upBound = 1,\n",
+    "        #                             cat = \"Binary\"\n",
+    "        #                             )     \n",
     "        \n",
     "        # regulation up hourly\n",
     "        self.reg_up = LpVariable.dicts(\n",
@@ -116,6 +99,15 @@
     "                                        lowBound = 0,\n",
     "                                        upBound = self.power_capacity\n",
     "                                        )\n",
+    "        \n",
+    "        # switch for regulation up\n",
+    "        # self.sw_reg_up = LpVariable.dicts(                                                                 \n",
+    "        #                             name = 'sw_reg_up', \n",
+    "        #                             indices= period,\n",
+    "        #                             lowBound = 0, \n",
+    "        #                             upBound = 1,\n",
+    "        #                             cat = \"Binary\"\n",
+    "        #                             )  \n",
     "\n",
     "        # regulation down hourly                        \n",
     "        self.reg_down = LpVariable.dicts(\n",
@@ -126,8 +118,8 @@
     "                                        )\n",
     "\n",
     "        # total charge hourly\n",
-    "        self.total_charge = LpVariable.dicts(\n",
-    "                                        name = 'total_charge',\n",
+    "        self.state_of_charge = LpVariable.dicts(\n",
+    "                                        name = 'state_of_charge',\n",
     "                                        indices= period,\n",
     "                                        lowBound = 0,\n",
     "                                        upBound = self.energy_capacity\n",
@@ -145,7 +137,7 @@
     "                                )\n",
     "        \n",
     "        # initializing total charge \n",
-    "        self.optimizer += self.total_charge[period[0]] == initial_charge\n",
+    "        self.optimizer += self.state_of_charge[period[0]] == initial_charge\n",
     "        \n",
     "        # iterate over the days in the period\n",
     "        # only 1 cycle of charge/discharge per day\n",
@@ -168,7 +160,12 @@
     "            if index > 0:\n",
     "                past_hour = period[index-1]\n",
     "                hour = period[index]\n",
-    "                self.optimizer += self.total_charge[hour] == self.total_charge[past_hour] + self.charge_hour[past_hour] * self.efficiency  - self.gen_hour[past_hour] - self.reg_up[past_hour] * 0.1 + self.reg_down[past_hour] * 0.1\n",
+    "                self.optimizer += (self.state_of_charge[hour] == + self.state_of_charge[past_hour]                   \n",
+    "                                                                 + self.charge_hour[past_hour]  * self.efficiency    \n",
+    "                                                                 - self.gen_hour[past_hour] * (1/self.efficiency)    \n",
+    "                                                                 + 0.1 * self.reg_down[past_hour]\n",
+    "                                                                 + 0.1 * self.reg_up[past_hour]  \n",
+    "                                    )\n",
     "                \n",
     "        for index in range(len(period)):\n",
     "                hour = period[index]\n",
@@ -176,32 +173,25 @@
     "                # generation plus regulation up should be less than capacity\n",
     "                self.optimizer += (self.gen_hour[hour] + self.reg_up[hour]) <= self.power_capacity\n",
     "                \n",
-    "                # generation plus regulation up should be less than battery charge\n",
-    "                self.optimizer += self.gen_hour[hour] + self.reg_up[hour] <= self.total_charge[hour] \n",
+    "                # generation plus regulation up should be less than equal to battery charge\n",
+    "                self.optimizer += self.gen_hour[hour] + self.reg_up[hour] <= 0.9 * self.state_of_charge[hour] \n",
     "                \n",
-    "                # switch to charge, charging only when swith is on (1)\n",
-    "                self.optimizer += self.charge_hour[hour] <= self.charge_sw[hour] * self.power_capacity\n",
-    "                \n",
-    "                self.optimizer += self.charge_hour[hour] >= self.charge_sw[hour] * 0.001\n",
+    "                # charge plus regulation down should be less than equal to remaining capacity of charge\n",
+    "                self.optimizer += self.gen_hour[hour] + self.reg_up[hour] <= 0.9 * (self.energy_capacity - self.state_of_charge[hour]) \n",
     "                \n",
     "                # reg down should be less than generation \n",
-    "                self.optimizer += self.reg_down[hour] <= self.gen_hour[hour]\n",
+    "                self.optimizer += self.reg_down[hour] <=  self.power_capacity\n",
+    "            \n",
     "                \n",
-    "                # exclude reg_down when battery is charging\n",
-    "                self.optimizer += self.reg_down[hour] <= (1 - self.charge_sw[hour]) * self.power_capacity\n",
-    "                \n",
-    "                # exclude reg_up when battery is charging\n",
-    "                self.optimizer += self.reg_up[hour] <= (1 - self.charge_sw[hour]) * self.power_capacity\n",
-    "\n",
     "        self.optimizer.solve()\n",
     "        self.total_profit = self.optimizer.objective.value()\n",
     "\n",
     "\n",
-    "    def get_results(self):\n",
+    "    def get_output_dataset(self):\n",
     "        '''\n",
     "        print the results of the optimization and the values of total profit\n",
     "        '''\n",
-    "        vars = ['gen_hour', 'charge_hour', 'reg_up_hour', 'reg_down_hour', 'total_charge','charge_sw']\n",
+    "        vars = ['gen_hour', 'charge_hour', 'reg_up_hour', 'reg_down_hour', 'state_of_charge']\n",
     "        results_dict = {}\n",
     "\n",
     "        for var in vars:\n",
@@ -212,9 +202,8 @@
     "                    day_hour = day_hour.replace('_', '-')\n",
     "                    day_hour = datetime.strptime(day_hour, '%Y-%m-%d-%H')\n",
     "                    results_dict[var][day_hour] = round(v.varValue,2)\n",
-    "        results_ds = pd.DataFrame.from_dict(results_dict)\n",
-    "        print(results_ds.head(10))\n",
-    "        results_ds.to_csv(f'results-{self.case}.csv')\n",
+    "        self.output_ds = pd.DataFrame.from_dict(results_dict)\n",
+    "        self.output_ds.to_csv(f'results-{self.case}.csv')\n",
     "    "
    ]
   },
@@ -227,16 +216,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\i34005\\AppData\\Local\\Temp\\ipykernel_23176\\526005032.py:23: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  self.energy_prices['Operating Day'] = pd.to_datetime(self.energy_prices['Operating Day'])\n",
+      "C:\\Users\\i34005\\AppData\\Local\\Temp\\ipykernel_23176\\526005032.py:34: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  self.reg_prices['Operating Day'] = pd.to_datetime(self.reg_prices['Operating Day'])\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "optimizer.total_profit = 1183245.7922177932\n"
+     ]
+    }
+   ],
    "source": [
     "optimizer = Bess_Optimizer(case = 'case1', power_capacity = 100, energy_capacity = 200, efficiency = 0.9)\n",
     "optimizer.load_prices(energy_price_file ='data/energy_prices.csv')\n",
     "optimizer.load_regulation(regulation_price_file = 'data/regulation_prices.csv')\n",
-    "optimizer.optimize_period(start_day = '1/1/2023', end_day = '1/2/2023', initial_charge = 0)\n",
+    "optimizer.optimize_period(start_day = '1/1/2023', end_day = '2/1/2023', initial_charge = 0)\n",
     "print(f'{optimizer.total_profit = }')\n",
-    "optimizer.get_results()"
+    "optimizer.get_output_dataset()"
    ]
   }
  ],
