--- a/BESS.ipynb
+++ b/BESS.ipynb
@@ -138,6 +138,26 @@
     "        \n",
     "        # initializing total charge \n",
     "        self.optimizer += self.state_of_charge[period[0]] == initial_charge\n",
+    "\n",
+    "        \n",
+    "        for index in range(len(period)):\n",
+    "                hour = period[index]\n",
+    "\n",
+    "                # generation plus regulation up should be less than capacity\n",
+    "                self.optimizer += (self.gen_hour[hour] + self.reg_up[hour]) <= self.power_capacity\n",
+    "                \n",
+    "                # generation plus regulation up should be less than equal to battery charge\n",
+    "                self.optimizer += self.gen_hour[hour] + self.reg_up[hour] <= 0.9 * self.state_of_charge[hour] \n",
+    "                \n",
+    "                # charging rate plus regulation down should be less than equal to remaining capacity of charge\n",
+    "                self.optimizer +=   (\n",
+    "                                    self.charge_hour[hour] + self.reg_down[hour] <= \n",
+    "                                    (self.energy_capacity - self.state_of_charge[hour]) * (1 / self.efficiency) \n",
+    "                                    )\n",
+    "                \n",
+    "                # reg down should be less than generation \n",
+    "                self.optimizer += self.reg_down[hour] <=  self.power_capacity\n",
+    "        \n",
     "        \n",
     "        # iterate over the days in the period\n",
     "        # only 1 cycle of charge/discharge per day\n",
@@ -153,9 +173,9 @@
     "                                    self.charge_hour[hour] \n",
     "                                    for hour in hour_day\n",
     "                                    ) <= self.energy_capacity \n",
+    "                \n",
     "\n",
-    "        \n",
-    "        # temporary dependency on charginf for all hours\n",
+    "        # temporary dependency on state of charge for all hours\n",
     "        for index in range(len(period)):\n",
     "            if index > 0:\n",
     "                past_hour = period[index-1]\n",
@@ -167,20 +187,6 @@
     "                                                                 + 0.1 * self.reg_up[past_hour]  \n",
     "                                    )\n",
     "                \n",
-    "        for index in range(len(period)):\n",
-    "                hour = period[index]\n",
-    "\n",
-    "                # generation plus regulation up should be less than capacity\n",
-    "                self.optimizer += (self.gen_hour[hour] + self.reg_up[hour]) <= self.power_capacity\n",
-    "                \n",
-    "                # generation plus regulation up should be less than equal to battery charge\n",
-    "                self.optimizer += self.gen_hour[hour] + self.reg_up[hour] <= 0.9 * self.state_of_charge[hour] \n",
-    "                \n",
-    "                # charge plus regulation down should be less than equal to remaining capacity of charge\n",
-    "                self.optimizer += self.gen_hour[hour] + self.reg_up[hour] <= 0.9 * (self.energy_capacity - self.state_of_charge[hour]) \n",
-    "                \n",
-    "                # reg down should be less than generation \n",
-    "                self.optimizer += self.reg_down[hour] <=  self.power_capacity\n",
     "            \n",
     "                \n",
     "        self.optimizer.solve()\n",
@@ -216,27 +222,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\i34005\\AppData\\Local\\Temp\\ipykernel_23176\\526005032.py:23: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
-      "  self.energy_prices['Operating Day'] = pd.to_datetime(self.energy_prices['Operating Day'])\n",
-      "C:\\Users\\i34005\\AppData\\Local\\Temp\\ipykernel_23176\\526005032.py:34: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
-      "  self.reg_prices['Operating Day'] = pd.to_datetime(self.reg_prices['Operating Day'])\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "optimizer.total_profit = 1183245.7922177932\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "optimizer = Bess_Optimizer(case = 'case1', power_capacity = 100, energy_capacity = 200, efficiency = 0.9)\n",
     "optimizer.load_prices(energy_price_file ='data/energy_prices.csv')\n",
