main file added

--- a/BESS.ipynb
+++ b/BESS.ipynb
@@ -9,12 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from pulp import LpProblem, LpMaximize, LpVariable, lpSum\n",
+    "from pulp import LpProblem, LpMaximize, LpVariable, lpSum, PULP_CBC_CMD\n",
     "from datetime import datetime\n",
     "\n",
     "class Bess_Optimizer:\n",
@@ -152,12 +152,8 @@
     "                # charging rate plus regulation down should be less than equal to remaining capacity of charge\n",
     "                self.optimizer +=   (\n",
     "                                    self.charge_hour[hour] + self.reg_down[hour] <= \n",
-    "                                    (self.energy_capacity - self.state_of_charge[hour]) * (1 / self.efficiency) \n",
+    "                                    (1 / self.efficiency) * (self.energy_capacity - self.state_of_charge[hour]) \n",
     "                                    )\n",
-    "                \n",
-    "                # reg down should be less than generation \n",
-    "                self.optimizer += self.reg_down[hour] <=  self.power_capacity\n",
-    "        \n",
     "        \n",
     "        # iterate over the days in the period\n",
     "        # only 1 cycle of charge/discharge per day\n",
@@ -167,12 +163,12 @@
     "            self.optimizer += lpSum(\n",
     "                                self.gen_hour[hour] \n",
     "                                for hour in hour_day\n",
-    "                                ) <= self.energy_capacity \n",
+    "                                ) <= self.efficiency * self.energy_capacity \n",
     "        \n",
     "            self.optimizer += lpSum(\n",
     "                                    self.charge_hour[hour] \n",
     "                                    for hour in hour_day\n",
-    "                                    ) <= self.energy_capacity \n",
+    "                                    ) <= (1/self.efficiency) * self.energy_capacity \n",
     "                \n",
     "\n",
     "        # temporary dependency on state of charge for all hours\n",
@@ -187,9 +183,7 @@
     "                                                                 + 0.1 * self.reg_up[past_hour]  \n",
     "                                    )\n",
     "                \n",
-    "            \n",
-    "                \n",
-    "        self.optimizer.solve()\n",
+    "        self.optimizer.solve(PULP_CBC_CMD(msg=False))\n",
     "        self.total_profit = self.optimizer.objective.value()\n",
     "\n",
     "\n",
